2013-09-13  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/spec/ipmi-cmd-oem-spec.h: Fix
	invalid hex for
	IPMI_CMD_OEM_INTEL_NODE_MANAGER_SET_NODE_MANAGER_ALERT_DESTINATION
	and
	IPMI_CMD_OEM_INTEL_NODE_MANAGER_GET_NODE_MANAGER_ALERT_DESTINATION.

	* ipmi-oem/: Enable support of IntelNM
	get-node-manager-alert-destination and
	set-node-manager-alert-destination.
	
2013-09-10  Albert Chu <chu11@llnl.gov>

	* NEWS, configure.ac: Update for release.

	* Tagged Release-1_3_2
	
2013-08-28  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/api/ipmi-api.h: Document mapping of
	IPMI completion codes and RMCPPlus codes to API error codes.

	* Update freeipmi libraries/tools to check/use API error codes
	correctly.
	
2013-08-27  Albert Chu <chu11@llnl.gov>

	Merge branch configcollapse.

	* ipmi-config/: New tool.

	* bmc-config/, ipmi-pef-config/, ipmi-sensors-config/,
	ipmi-chassis-config/: Remove tools.

	* common/configtool/: Remove common files. 

	* common/toolcommon/: Update config file parsing to recognize
	ipmi-config and legacy options.

	* doc/, man/: Update documentation appropriately for change.
	
	* Tagged Release-1_3_1.
	
2013-08-22  Albert Chu <chu11@llnl.gov>

	* configure.ac, NEWS: Update for release.

2013-08-13  Albert Chu <chu11@llnl.gov>

	* man/bmc-config.conf.5.pre.in: Fix section typos.

	* man/libfreeipmi.3.pre.in, man/freeipmi.7.pre.in,
	man/freeipmi.conf.5.pre.in: Add missing tool.
	
2013-08-09  Albert Chu <chu11@llnl.gov>

	* doc/: Update all docs w/ dates.
	
2013-08-02  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/sdr/ipmi-sdr-parse-util.c (ipmi_sdr_parse_entity_sensor_name):
	Handle special corner case w/ double printed name.

2013-07-03  John Gilmore <gnu@toad.com>

	* Fix compiler issues w/ gcc-2.96.

2013-07-03  Albert Chu <chu11@llnl.gov>

	* ipmi-sensors/ipmi-sensors-output-common.c (ipmi_sensors_get_thresholds):
	When thresholds access reported by SDR is fixed/unreadable, the