@@ -1,7 +1,10 @@
-FreeIPMI 1.3.2 - 09/13/13
+FreeIPMI 1.3.3 - 09/23/13
 -------------------------
 o Add support for intelnm get-node-manager-alert-destination and
   set-node-manager-alert-destination in ipmi-oem.
+o Under very verbose mode, ipmi-sel will now record types for OEM
+  records.  This should allow OEM parses outside of FreeIPMI to more
+  effectively parse OEM specific SEL records.
 
 FreeIPMI 1.3.2 - 09/10/13
 -------------------------
